Update SessionService.java